--- a/websocket-backend-example/src/main/resources/application.properties
+++ b/websocket-backend-example/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 
 #server.context-path=/websocket-backend
+
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=allFiles
+spring.data.mongodb.repositories.type=auto
+
+spring.servlet.multipart.max-file-size=5000KB
+spring.servlet.multipart.max-request-size=5000KB
