--- a/sidebar/package.json
+++ b/sidebar/package.json
@@ -25,6 +25,7 @@
     "@types/stompjs": "^2.3.4",
     "hammerjs": "^2.0.8",
     "net": "^1.0.2",
+    "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.4.0",
     "stomp": "^0.1.1",
     "stompjs": "^2.3.3",
