--- a/sidebar/package.json
+++ b/sidebar/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.11",
     "@types/sockjs-client": "^1.1.1",
     "@types/stompjs": "^2.3.4",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "net": "^1.0.2",
     "ng2-file-upload": "^1.4.0",
